<resources>
    <string name="app_name">Stalker</string>
    <string name="snackBar_dismiss_label">Dismiss</string>
    <string name="home_label">Hello %1$s, with id %2$s</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="signup_label">Sign Up</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="mail_error_label">There is an error in the email field.</string>
    <string name="error_pass_label">There is an error in the password field.</string>
    <string name="manu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="snackbar_dismiss_label">Dismiss</string>
    <string name="snackbar_comfirm_label">Ok</string>
    <string name="error_name_label">There is an error in the name field</string>
    <string name="error_phone_label">There is an error in the phone field</string>
    <string name="register_label">Register</string>
    <string name="name_label">Name</string>
    <string name="phone_label">Phone</string>
    <string name="perfil_label">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow_user">Follow User</string>
    <string name="follow_users">Follow Users</string>
</resources>